==> playboy51job/WeiXinDirect_git/MiCO_SDK_2.4.1/MiCO_SDK_2.4.1/Platform/MCU/STM32F2xx/peripherals/platform_i2c.c <==
#include "platform.h"
#include "platform_peripheral.h"
#include "stm32f2xx.h"
#include "PlatformLogging.h"
#define I2C_FLAG_CHECK_TIMEOUT      ( 1000 )
#define I2C_FLAG_CHECK_LONG_TIMEOUT ( 1000 )
#define DMA_FLAG_TC(stream_id) dma_flag_tc(stream_id)
#define DMA_TIMEOUT_LOOPS      (10000000)

OSStatus platform_i2c_init( const platform_i2c_t* i2c, const platform_i2c_config_t* config )
{
  OSStatus err = kNoErr;
  I2C_InitTypeDef  I2C_InitStructure;

  platform_mcu_powersave_disable( );
  require_action_quiet( i2c != NULL, exit, err = kParamErr);
  
  // Init I2C GPIO clocks
  RCC_APB1PeriphClockCmd( i2c->peripheral_clock_reg, ENABLE );
  err = platform_gpio_enable_clock( i2c->pin_scl );
  require_noerr(err, exit);
  err = platform_gpio_enable_clock( i2c->pin_sda );
  require_noerr(err, exit);
  RCC_APB2PeriphClockCmd( RCC_APB2Periph_SYSCFG, ENABLE );
  
  // Reset the I2C clock
  RCC_APB1PeriphResetCmd( i2c->peripheral_clock_reg, ENABLE );
  RCC_APB1PeriphResetCmd( i2c->peripheral_clock_reg, DISABLE );
  
  // GPIO Configuration
  platform_gpio_set_alternate_function( i2c->pin_scl->port, i2c->pin_scl->pin_number, GPIO_OType_OD, GPIO_PuPd_NOPULL, i2c->gpio_af );
  platform_gpio_set_alternate_function( i2c->pin_sda->port, i2c->pin_sda->pin_number, GPIO_OType_OD, GPIO_PuPd_NOPULL, i2c->gpio_af );
  
#ifdef I2C_USE_DMA
  // Enable the DMA clock
  RCC_AHB1PeriphClockCmd( i2c_mapping[device->port].tx_dma_peripheral_clock, ENABLE );
  
  // Configure the DMA streams for operation with the CP
  i2c_dma_init.DMA_Channel            = i2c_mapping[device->port].tx_dma_channel;
  i2c_dma_init.DMA_PeripheralBaseAddr = (uint32_t)&i2c_mapping[device->port].i2c->DR;
  i2c_dma_init.DMA_PeripheralInc      = DMA_PeripheralInc_Disable;
  i2c_dma_init.DMA_MemoryInc          = DMA_MemoryInc_Enable;
  i2c_dma_init.DMA_PeripheralDataSize = DMA_PeripheralDataSize_Byte;
  i2c_dma_init.DMA_MemoryDataSize     = DMA_MemoryDataSize_Byte;
  i2c_dma_init.DMA_Mode               = DMA_Mode_Normal;
  i2c_dma_init.DMA_Priority           = DMA_Priority_VeryHigh;
  //dma_init.DMA_FIFOMode           = DMA_FIFOMode_Enable;
  //dma_init.DMA_FIFOThreshold      = DMA_FIFOThreshold_Full;
  i2c_dma_init.DMA_MemoryBurst        = DMA_MemoryBurst_Single;
  i2c_dma_init.DMA_PeripheralBurst    = DMA_PeripheralBurst_Single;
  i2c_dma_init.DMA_Memory0BaseAddr    = (uint32_t) 0;               // This parameter will be configured during communication
  i2c_dma_init.DMA_DIR                = DMA_DIR_MemoryToPeripheral; // This parameter will be configured during communication
  i2c_dma_init.DMA_BufferSize         = 0xFFFF;                     // This parameter will be configured during communication
  
  DMA_DeInit( i2c_mapping[device->port].rx_dma_stream );
  DMA_DeInit( i2c_mapping[device->port].tx_dma_stream );
  
  // Clear any pending flags, disable, and clear the Tx DMA channel
  //DMA_ClearFlag( i2c_mapping[device->port].tx_dma_stream, CP_TX_DMA_FLAG_FEIF | CP_TX_DMA_FLAG_DMEIF | CP_TX_DMA_FLAG_TEIF | CP_TX_DMA_FLAG_HTIF | CP_TX_DMA_FLAG_TCIF );
  DMA_Cmd( i2c_mapping[device->port].tx_dma_stream, DISABLE );
  DMA_Cmd( i2c_mapping[device->port].rx_dma_stream, DISABLE );
  
  // Clear any pending flags, disable, and clear the Rx DMA channel
  //DMA_ClearFlag( i2c_mapping[device->port].rx_dma_stream, CP_RX_DMA_FLAG_FEIF | CP_RX_DMA_FLAG_DMEIF | CP_RX_DMA_FLAG_TEIF | CP_RX_DMA_FLAG_HTIF | CP_RX_DMA_FLAG_TCIF );
#endif
  
  // Initialize the InitStruct for the CP
  I2C_InitStructure.I2C_Mode                = I2C_Mode_I2C;
  I2C_InitStructure.I2C_DutyCycle           = I2C_DutyCycle_2;
  I2C_InitStructure.I2C_OwnAddress1         = 0xA0;
  I2C_InitStructure.I2C_Ack                 = I2C_Ack_Enable;
  I2C_InitStructure.I2C_AcknowledgedAddress = I2C_AcknowledgedAddress_7bit;
  
  if ( config->speed_mode == I2C_LOW_SPEED_MODE )
  {
    I2C_InitStructure.I2C_ClockSpeed = 10000;
  }
  else if ( config->speed_mode == I2C_STANDARD_SPEED_MODE )
  {
    I2C_InitStructure.I2C_ClockSpeed = 100000;
  }
  else if ( config->speed_mode == I2C_HIGH_SPEED_MODE )
  {
    I2C_InitStructure.I2C_ClockSpeed = 400000;
  }
  
  // Enable and initialize the I2C bus
  I2C_Cmd( i2c->port, ENABLE );
  I2C_Init( i2c->port, &I2C_InitStructure );
  
#ifdef I2C_USE_DMA
  // Enable DMA on the I2C bus
  I2C_DMACmd( i2c->port, ENABLE );
#endif

exit:
  platform_mcu_powersave_enable( );
  return err;
}

bool platform_i2c_probe_device( const platform_i2c_t* i2c, const platform_i2c_config_t* config, int retries )
{
  OSStatus err = kNoErr;

  platform_mcu_powersave_disable();

  require_action_quiet( i2c != NULL, exit, err = kParamErr);

  err = i2c_address_device( i2c, config, retries, I2C_Direction_Transmitter );

  I2C_GenerateSTOP( i2c->port, ENABLE );

exit:
  platform_mcu_powersave_enable();
  return ( err == kNoErr) ? true : false;
}

OSStatus platform_i2c_transfer( const platform_i2c_t* i2c, const platform_i2c_config_t* config, platform_i2c_message_t* messages, uint16_t number_of_messages )
{
  OSStatus err = kNoErr;
  int      i   = 0;

  platform_mcu_powersave_disable();
  
  require_action_quiet( i2c != NULL, exit, err = kParamErr);
  
  for( i=0; i < number_of_messages; i++ )
  {
#ifdef I2C_USE_DMA
    err = i2c_dma_transfer(device, &messages[i]);
    require_noerr(err, exit);
#else  
    err = i2c_transfer_message_no_dma( i2c, config, &messages[ i ] );
    require_noerr(err, exit);
#endif
  }

 exit: 
  platform_mcu_powersave_enable();
  return err;
}

OSStatus platform_i2c_deinit( const platform_i2c_t* i2c, const platform_i2c_config_t* config )
{
  UNUSED_PARAMETER( config );
  OSStatus err = kNoErr;
  
  platform_mcu_powersave_disable();

  require_action_quiet( i2c != NULL, exit, err = kParamErr);

  /* Disable I2C peripheral clocks */
  RCC_APB1PeriphClockCmd( i2c->peripheral_clock_reg, DISABLE );
  
  /* Disable DMA */
#ifdef I2C_USE_DMA
  DMA_DeInit( i2c->rx_dma_stream );
  DMA_DeInit( i2c->tx_dma_stream );
  RCC_AHB1PeriphClockCmd( i2c->tx_dma_peripheral_clock, DISABLE );
#endif
  
exit:
  platform_mcu_powersave_enable();
  return err;
}
